make a image responsive

--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>make a image responsive</title>
     <style>
-        .image{
-            display: flex;
-            justify-content: center;
-            @media screen and (max-width:576px) {
-                
-            }
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        img{
+          width: 49vw;
+          height: 100vh;
         }
     </style>
 </head>
 <body>
-    <div class="image"><img src="./image/mahir.jpg" alt=""></div>
+    <div class="image">
+        <img src="./image/mahir.jpg" alt="">
+        <img src="./image/mahir.jpg" alt="">
+    </div>
 </body>
 </html>
